{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 80,
  "lineage": "778d156d-add6-ff1c-b1cd-4b41300d1495",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a16da167abd5340",
            "arn": "arn:aws:ec2:eu-west-2:233896339906:elastic-ip/eipalloc-08a16da167abd5340",
            "association_id": "eipassoc-0c32d2f6e39a66198",
            "domain": "vpc",
            "id": "eipalloc-08a16da167abd5340",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d8862344cb284ac8",
            "private_dns": "ip-10-0-1-226.eu-west-2.compute.internal",
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-35-177-242-230.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.242.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "saas-microservices-nat-eip"
            },
            "tags_all": {
              "Name": "saas-microservices-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:internet-gateway/igw-07bfddb18759b2b7f",
            "id": "igw-07bfddb18759b2b7f",
            "owner_id": "233896339906",
            "tags": {
              "Name": "saas-microservices-igw"
            },
            "tags_all": {
              "Name": "saas-microservices-igw"
            },
            "vpc_id": "vpc-09223db68a6c45216"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a16da167abd5340",
            "association_id": "eipassoc-0c32d2f6e39a66198",
            "connectivity_type": "public",
            "id": "nat-0a67fdf3d6cfc1bc7",
            "network_interface_id": "eni-0d8862344cb284ac8",
            "private_ip": "10.0.1.226",
            "public_ip": "35.177.242.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a6da687e06d29219",
            "tags": {
              "Name": "saas-microservices-nat"
            },
            "tags_all": {
              "Name": "saas-microservices-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:route-table/rtb-0913d34c6ff9bdce1",
            "id": "rtb-0913d34c6ff9bdce1",
            "owner_id": "233896339906",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a67fdf3d6cfc1bc7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saas-microservices-private-rt"
            },
            "tags_all": {
              "Name": "saas-microservices-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09223db68a6c45216"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:route-table/rtb-04183403b9db04737",
            "id": "rtb-04183403b9db04737",
            "owner_id": "233896339906",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bfddb18759b2b7f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saas-microservices-public-rt"
            },
            "tags_all": {
              "Name": "saas-microservices-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09223db68a6c45216"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eff3c15d322604fa",
            "route_table_id": "rtb-0913d34c6ff9bdce1",
            "subnet_id": "subnet-0f86bfeb1568d95da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6028627710d529d",
            "route_table_id": "rtb-0913d34c6ff9bdce1",
            "subnet_id": "subnet-0af89d17c7b84ec4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d03a05619c6965f",
            "route_table_id": "rtb-04183403b9db04737",
            "subnet_id": "subnet-0a6da687e06d29219"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c12a33703543052c",
            "route_table_id": "rtb-04183403b9db04737",
            "subnet_id": "subnet-08cfff9d15458f0c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-0f86bfeb1568d95da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f86bfeb1568d95da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-private-1",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "saas-microservices-private-1",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09223db68a6c45216"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-0af89d17c7b84ec4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af89d17c7b84ec4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-private-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "saas-microservices-private-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09223db68a6c45216"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-0a6da687e06d29219",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6da687e06d29219",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-public-1",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "saas-microservices-public-1",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09223db68a6c45216"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:subnet/subnet-08cfff9d15458f0c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cfff9d15458f0c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233896339906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saas-microservices-public-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "saas-microservices-public-2",
              "kubernetes.io/cluster/saas-microservices": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09223db68a6c45216"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233896339906:vpc/vpc-09223db68a6c45216",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0836fc0df0946cd67",
            "default_route_table_id": "rtb-023dbaec3a991328c",
            "default_security_group_id": "sg-00056971e888eadd6",
            "dhcp_options_id": "dopt-0610f1858c6962384",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09223db68a6c45216",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023dbaec3a991328c",
            "owner_id": "233896339906",
            "tags": {
              "Name": "saas-microservices-vpc"
            },
            "tags_all": {
              "Name": "saas-microservices-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}